namespace DSC.Data.Models
{
    public class DirectorCode
    {
        public string Code { get; set; } = string.Empty;
        public string? Description { get; set; }
    }
}
