namespace DSC.Data.Models
{
    public class ProjectActivity
    {
        public int ActivityId { get; set; }
        public string ProjectNo { get; set; } = string.Empty;
        public int NetworkNumber { get; set; }
        public int ActivityCode { get; set; }
    }
}
