namespace DSC.Data.Models
{
    public class ReasonCode
    {
        public string Code { get; set; } = string.Empty;
        public string? Description { get; set; }
    }
}
