using System;

namespace DSC.Data.Models
{
    public class UserUser
    {
        public int UserEmpId { get; set; }
        public int UserEmpId2 { get; set; }
        public DateTime StartDate { get; set; }
        public DateTime? EndDate { get; set; }
    }
}
